--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 	<meta http-equiv="Pragma" content="no-cache">
 	<meta http-equiv="Expires" content="0">	
+	<meta name="google-site-verification" content="LD0auz0kQ-4tEHtD6TWV_M0f2Gaz4O5HaPXJ4ooEqL0" />
 
 	<!-- Css -->
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
