--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 	<!-- Metas -->
 	<meta charset="utf-8">
-	<title>Enrico Mensa | Research Associate (RTDa)</title>
+	<title>Enrico Mensa | Fixed-Term Researcher (RTDa)</title>
 	<meta name="description" content="Enrico Mensa, PhD">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta content="telephone=no" name="format-detection">
@@ -117,7 +117,7 @@
 
 											<div class="main-title profile">
 												<h1 class="mb-20">Enrico Mensa</h1>
-												<h3>Research Associate (RTDa)</h3>
+												<h3>Fixed-Term Researcher (RTDa)</h3>
 											</div>
 										</div>
 									</div>
